Update template & add admin

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,5 @@
 $primary: #00479B; // Replace with your desired primary color
+$secondary: #b45c2a; // Replace with your desired secondary color
 
 ::-webkit-scrollbar {
     -webkit-appearance: none;
@@ -14,19 +15,32 @@ $primary: #00479B; // Replace with your desired primary color
 .navbar-nav .separator {
     width: 1px;
     height: 40px; /* Adjust height according to your navbar height */
-    background-color: #ddd; /* Adjust color as needed */
+    background-color: $primary; /* Separator color */
     margin: 0 10px; /* Adjust spacing as needed */
 }
 
-.navbar-nav .nav-item .nav-link.active {
+.navbar-nav .nav-item .nav-link {
     color: #00479B;  /* Text color */
-    border-radius: 4px;  /* Rounded corners */
+    font-weight: bold;  /* Normal text */
+    border-radius: 50px; /* Rounded corners */
+    background: #FFFFFF;
+    padding: 8px 15px !important; /* Adjust padding as needed */
+}
+
+.navbar-nav .nav-item .nav-link.active {
+    color: #FFFFFF;  /* Text color */
     font-weight: bold;  /* Bold text */
+    // rounded
+    background-color: #70AD47;
+    border-radius: 50px;
+    padding: 8px 15px;
 }
 
 .navbar-nav .nav-item .nav-link:hover {
-    color: #00479B;  /* Text color on hover */
-    border-radius: 4px;  /* Rounded corners */
+    color: #FFFFFF;  /* Text color on hover */
+    background-color: #70AD47;
+    border-radius: 50px;
+    padding: 8px 15px;
 }
 
 span {
@@ -77,6 +91,38 @@ span:active {
     white-space: nowrap;
     /* Mencegah wrap ke baris baru */
 }
+
+/* Sidebar Admin*/
+.sidebar {
+    // position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    // padding: 58px 0 0; /* Height of navbar */
+    // box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
+    width: 100%;
+    // z-index: 600;
+}
+
+@media (max-width: 991.98px) {
+    .sidebar {
+        width: 100%;
+    }
+}
+.sidebar .active {
+    border-radius: 5px;
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+}
+
+.sidebar-sticky {
+    position: relative;
+    top: 0;
+    height: calc(100vh - 48px);
+    padding-top: 0.5rem;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+}
+/* Sidebar Admin*/
 
 .sidebar-left { 
     min-height: 500px;
